fixed scrollbar making content shift left

--- a/hello-world/src/style/global.scss
+++ b/hello-world/src/style/global.scss
@@ -13,6 +13,11 @@
     }
 }
 
+html {
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 html, body {
     background-color: $background-color;
 }
